Fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body{
     justify-content: space-between;
     background:#FAFAFB;
     position: fixed;
+    height: max-content;
     left: 0px;
     top: 0px;
     background: #FAFAFB;
@@ -82,12 +83,6 @@ body{
         font-size: 0.75vw;
         margin-right: 1vw;
         padding:0.5vw  1vw ;
-   }
-   .navBarLogo{
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        
    }
    .logo{
    width: 10vw;
@@ -182,6 +177,9 @@ body{
     cursor:pointer;
     
 }
+.mobile{
+  display: none;
+}
 @media screen and (min-width: 1440px) {
      
 }
@@ -196,30 +194,37 @@ body{
 
 @media screen and (max-width: 479px) {
     body{
-        
-        width: 100%;
-        overflow-x: clip;
-        overflow-x: hidden;
+        /**/
     }
     .navBarContainer{
         flex-direction: column;
-        align-items: center;
-        padding : 5% 5% 5% 0%;
+        align-items: flex-start;
+        justify-content: space-between;
+        padding : 8% 5% 3% 0%;
+        width: 100%;
+        
     }
     
     .navbuttons{
-      
+
         display: flex;
         width: 100%;
+        
         justify-content: center;
         padding-top: 3%;
         /* border: 1px solid white; */
         margin:0% !important;
+        color: rgba(0, 0, 0, 0.4);
       }
-   
-      .contact{
+      .navbuttons .active{
+        color:black  !important;
+      }
+      
+      .contact .mobile{
+        display: block;
        background: linear-gradient(89.96deg, #4829A0 0.85%, #8053FF 99.96%);
        border-radius: 24px;
+       position: absolute;
       }
       .navbuttons div{
       
@@ -228,16 +233,13 @@ body{
        padding: 2% 4% ;
        
       }
-       .logo-header {
-         padding: 3% 0%;
-         flex-direction: column;
-         z-index: 2;
-       }
        .logo {
-         width: 32vw;
+         padding-left: 76%;
+         top: 0;
+         width: 40vw;
        }
      .heroContent{
-        padding-top: 35%;
+        padding-top: 40%;
         
         flex-direction: column-reverse;
         justify-content: center;
